<resources>
    <string name="app_name">neighborhoodWork</string>
    <string name="tx1Dolacz">Witamy w Just Jobs!</string>
    <string name="tx1Utworz">Utworz konto</string>
    <string name="tx1Email">E-mail lub \nnumer telefonu</string>
    <string name="tx1PodMain">Pomożemy ci zadbać o przydomowe kieszonkowe lub wykonać jakieś przydomowe prace</string>
    <string name="tx2Witaj">Witaj, ponownie!</string>
    <string name="tx2ZalogujSie">Zaloguj Się</string>
    <string name="Etx2Email"><p>  </p>E-mail</string>
    <string name="Etx2Haslo"><p>  </p>hasło</string>
    <string name="Zaloguj">Zaloguj</string>
    <string name="tx2Zapomniałes">Zapomniałeś hasła?</string>
    <string name="tx3UtworzKonto">Utworz Konto!</string>
    <string name="Etx3Email"><p>  </p>E-mail</string>
    <string name="Etx3nazwa"><p>  </p>Imie i nazwisko</string>
    <string name="Etx3Haslo"><p>  </p>hasło</string>
    <string name="tx3Utworz">Utwórz</string>
    <string name="tx4Home"> Mapa </string>
    <string name="tx4Praca"> Praca w okolicy </string>
    <string name="tx4Pracownicy"> Pracownicy w okolicy </string>
    <string name="tx4OcenaZlecenia"> Zlecone zadania : 17 | Ocena 4,7/5 </string>
    <string name="tx4OcenaPracy"> Wykonane zlecenia : 193 | Ocena 3,2/5 </string>
    <string name="tx4SG"> Strona Główna </string>
    <string name="tx4Chat"> Chat </string>
    <string name="tx4Mapa"> Mapa </string>
    <string name="tx4Profil"> Profil </string>
    <string name="title_activity_maps">Map</string>
    <string name="tx5Main">Chat</string>
    <string name="Etx7Tel"><p>  </p>Numer telefonu</string>
    <string name="tx3Wolisz">Aby użyć telefonu Kliknij Tutaj!</string>
    <string name="tx7Wolisz">Aby użyć e-maila Kliknij Tutaj!</string>
    <string name="tx10Imie">Jakub Gołos</string>
    <string name="facebook_application_id" translatable="false">226052328835750</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb226052328835750</string>
    <string name="open">otwarto</string>
    <string name="close">zamknieto</string>
    <string name="tx5KoniecRC">Nie masz więcej kontaktów</string>
    <string name="tx6Main">Twój Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
