<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utworzNrTel">
    <TextView
        android:id="@+id/tx7UtworzKonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/tx3UtworzKonto"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Etx7Tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/Etx7Tel"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx7UtworzKonto" />

    <EditText
        android:id="@+id/Etx7Nazwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Etx3nazwa"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Etx7Tel" />

    <EditText
        android:id="@+id/Etx7Haslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Etx3Haslo"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Etx7Nazwa" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Etx7Haslo">

        <TextView
            android:id="@+id/tx7Utworz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0db3ff"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tx3Utworz"
            android:textColor="#F6F6F6"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img7warning1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:tint="#ED0303"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/Etx7Tel"
        app:layout_constraintTop_toTopOf="@+id/Etx7Tel"
        app:srcCompat="@drawable/warning" />

    <ImageView
        android:id="@+id/img7warning2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:tint="#ED0303"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/Etx7Nazwa"
        app:layout_constraintTop_toTopOf="@+id/Etx7Nazwa"
        app:srcCompat="@drawable/warning" />

    <ImageView
        android:id="@+id/img7warning3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:tint="#ED0303"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/Etx7Haslo"
        app:layout_constraintTop_toTopOf="@+id/Etx7Haslo"
        app:srcCompat="@drawable/warning" />

    <TextView
        android:id="@+id/tx7warning1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#ED0303"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/Etx7Tel"
        app:layout_constraintTop_toBottomOf="@+id/Etx7Tel" />

    <TextView
        android:id="@+id/tx7warning2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#ED0303"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/Etx7Nazwa"
        app:layout_constraintTop_toBottomOf="@+id/Etx7Nazwa" />

    <TextView
        android:id="@+id/tx7warning3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#ED0303"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/Etx7Haslo"
        app:layout_constraintTop_toBottomOf="@+id/Etx7Haslo" />

    <TextView
        android:id="@+id/tx7Wolisz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tx7Wolisz"
        app:layout_constraintStart_toStartOf="@+id/Etx7Tel"
        app:layout_constraintTop_toBottomOf="@+id/tx7warning1" />
</androidx.constraintlayout.widget.ConstraintLayout>