<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utworzKontoEmail">

    <TextView
        android:id="@+id/tx3UtworzKonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/tx3UtworzKonto"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Etx3Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/Etx3Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx3UtworzKonto" />

    <EditText
        android:id="@+id/Etx3Nazwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Etx3nazwa"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Etx3Email" />

    <EditText
        android:id="@+id/Etx3Haslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Etx3Haslo"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Etx3Nazwa" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Etx3Haslo">

        <TextView
            android:id="@+id/tx3Utworz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0db3ff"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tx3Utworz"
            android:textColor="#F6F6F6"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img3warning1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:tint="#ED0303"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/Etx3Email"
        app:layout_constraintTop_toTopOf="@+id/Etx3Email"
        app:srcCompat="@drawable/warning" />

    <ImageView
        android:id="@+id/img3warning2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:tint="#ED0303"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/Etx3Nazwa"
        app:layout_constraintTop_toTopOf="@+id/Etx3Nazwa"
        app:srcCompat="@drawable/warning" />

    <ImageView
        android:id="@+id/img3warning3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:tint="#ED0303"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/Etx3Haslo"
        app:layout_constraintTop_toTopOf="@+id/Etx3Haslo"
        app:srcCompat="@drawable/warning" />

    <TextView
        android:id="@+id/tx3warning1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#ED0303"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/Etx3Email"
        app:layout_constraintTop_toBottomOf="@+id/Etx3Email" />

    <TextView
        android:id="@+id/tx3warning2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#ED0303"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/Etx3Nazwa"
        app:layout_constraintTop_toBottomOf="@+id/Etx3Nazwa" />

    <TextView
        android:id="@+id/tx3warning3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#ED0303"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/Etx3Haslo"
        app:layout_constraintTop_toBottomOf="@+id/Etx3Haslo" />

    <TextView
        android:id="@+id/tx3WoliszUzycTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tx3Wolisz"
        app:layout_constraintStart_toStartOf="@+id/Etx3Email"
        app:layout_constraintTop_toBottomOf="@+id/tx3warning1" />

</androidx.constraintlayout.widget.ConstraintLayout>